added sorting by rate for commodities